--- a/FunctionCalculator/FunctionCalculator.vcxproj.filters
+++ b/FunctionCalculator/FunctionCalculator.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClInclude Include="ARITHMETIC_TYPE.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TOKENTYPE.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
