--- a/FunctionCalculator/.vscode/tasks.json
+++ b/FunctionCalculator/.vscode/tasks.json
@@ -8,7 +8,8 @@
         "main.cpp",
         "parser.cpp",
         "tokeniser.cpp",
-        "TREE_ELEMENT.cpp"],
+        "tree_element.cpp",
+        "parselets.cpp"],
     "showOutput": "silent",
     "problemMatcher": {
         "owner": "cpp",
