We'll just use C since there's nothing from C++ we're using

--- a/FunctionCalculator/.vscode/tasks.json
+++ b/FunctionCalculator/.vscode/tasks.json
@@ -2,15 +2,17 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "g++",
+    "command": "gcc",
     "isShellCommand": true,
     "args": ["-g", "-Wall", "-o", "FunctionCalculator.out",
-        "main.cpp",
-        "parser.cpp",
-        "tokeniser.cpp",
-        "tree_element.cpp",
-        "parselets.cpp"],
-    "showOutput": "silent",
+        "main.c",
+        "parser.c",
+        "tokeniser.c",
+        "tree_element.c",
+        "parselets.c",
+        "interpreter.c",
+        "-lm"],
+    "showOutput": "always",
     "problemMatcher": {
         "owner": "cpp",
         "fileLocation": ["relative", "${workspaceRoot}"],
