Format changes, implement hashtable

--- a/FunctionCalculator/.vscode/tasks.json
+++ b/FunctionCalculator/.vscode/tasks.json
@@ -11,6 +11,7 @@
         "tree_element.c",
         "parselets.c",
         "interpreter.c",
+        "hashtable.c",
         "-lm"],
     "showOutput": "always",
     "problemMatcher": {
