--- a/FunctionCalculator/.vscode/settings.json
+++ b/FunctionCalculator/.vscode/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "editor.formatOnType": true,
-    "editor.acceptSuggestionOnEnter": false
+    "editor.acceptSuggestionOnEnter": false,
+    "C_Cpp.clang_format_formatOnSave": true
 }
